fixed title page overflow

--- a/src/styles/Title.css
+++ b/src/styles/Title.css
@@ -6,7 +6,7 @@
   gap: 10px;
   align-items: center;
   margin: 50px 0 30px 0;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .title-text {
@@ -46,6 +46,7 @@
 @media only screen and (max-width: 960px) {
   .title-container {
     width: 100%;
+    overflow: visible;
   }
 }
 
