--- a/src/styles/updateDetails.css
+++ b/src/styles/updateDetails.css
@@ -15,10 +15,10 @@
 .updateDetails-page-container {
   display: flex;
   width: 100%;
-  height: auto;
+  height: 100%;
   align-items: center;
   justify-content: center;
-  background-color: #bc9f7d;
+  background-color: var(--lightest);
 }
 .updateDetails-date {
   margin-left: 15px;
